fix background on safari

--- a/Capros/game/game.css
+++ b/Capros/game/game.css
@@ -46,7 +46,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
+  background-size: 100%   100%;
   z-index: -1;
 
   --left: 0;
@@ -64,7 +64,7 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   z-index: -1;
-  transform: scale(1.1);
+  /*transform: scale(1.1);*/
 }
 
 .start-screen {
